fixed internal - changed to lord
